# aidrin

./: .gitignore  .mcp.json  AGENTS.md  CODE_OF_CONDUCT.md  README.md  cli-integration.patch  pyproject.toml  requirements.txt  test_app.py  test_dtype_guards.py  tox.ini
.claude/skills/aidrin/: SKILL.md
.claude/skills/aidrin/assets/: report-template.md
.claude/skills/aidrin/reference/: evals.md  installation.md  metrics.md
.claude/skills/assessing-dataset-readiness/: SKILL.md
.claude/skills/assessing-dataset-readiness/assets/: report-template.md
.claude/skills/assessing-dataset-readiness/reference/: evals.md  installation.md  metrics.md
.github/: CODEOWNERS
.github/workflows/: build.yml  docs.yml  lint.yml  prettier.yml  tests.yml
.superpowers/sdd/: task-4-report.md
aidrin/: __init__.py  _version.py  logging.py  main.py
aidrin/agentic/: __init__.py  complexity_scorer.py  data_profiler.py  executor.py  llm_factory.py  remediation_generator.py  retriever.py  run.py  token_tracker.py  vector_db_builder.py
aidrin/custom_metrics/: __init__.py  base_dr.py  customDR_2e6736cb-888f-4fd6-ae44-3b2541a912a6.py
aidrin/file_handling/: file_parser.py
aidrin/file_handling/readers/: excel_reader.py  hdf5_reader.py  json_reader.py  npz_reader.py  parquet_reader.py
aidrin/headless/: __init__.py  api.py  cli.py  config.py  runners.py
aidrin/mcp/: server.py
aidrin/static/css/: styles.css
aidrin/static/js/: main.js  metric.js
aidrin/structured_data_metrics/: FAIRness_datacite.py  FAIRness_dcat.py  add_noise.py  class_imbalance.py  completeness.py  conditional_demo_disp.py  correlation_score.py  duplicity.py  feature_relevance.py  hipaa_compliance.py  outliers.py  privacy_measure.py  representation_rate.py  statistical_rate.py  summary_statistics.py
aidrin/templates/: upload_file.html
aidrin/templates/metricTemplates/: classImbalance.html  correlationAnalysis.html  customMetrics.html  featureRelevance.html  hipaaCompliance.html  metricBase.html
demos/: 01_data_quality.yaml  02_feature_analysis.yaml  03_fairness.yaml  04_privacy.yaml  05_privacy_risk.yaml  06_all_metrics.yaml  generate_datasets.py  loan_applications.csv  messy_sensor_data.csv  patient_records.csv  run_demos.sh
docs/source/: aidrin_skill.rst  cli_installation.rst  cli_usage.rst  conf.py  contributing.rst  custom_metrics.rst  index.rst  installation.rst  limitations.rst  publications.rst  testing.rst  usage.rst  web_installation.rst  web_usage.rst
examples/agentic/power_consumption/: config.yaml  loader.py
examples/agentic/power_consumption/data/: metadata.txt
examples/sample_data/csv/: adult.csv
examples/sample_data/dcat/: EGS_Collab_Experiment.json
examples/sample_data/h5/: adult.h5  employees.h5
examples/sample_data/json/: employees.json
examples/sample_data/npz/: adult.npz
examples/sample_data/xlsx/: adult.xlsx
tests/: test_headless.py
tests/integration/: conftest.py  test_admin.py  test_app.py  test_categorical_summary.py  test_core_routes.py  test_custom_metrics.py  test_globus.py  test_inspector.py  test_inspector_metrics.py  test_inspector_upload.py  test_llm.py  test_more_metrics.py  test_pages.py  test_summary_statistics.py  test_telemetry.py
tests/unit/: test_agentic.py  test_cli.py  test_data_quality.py  test_excel_reader.py  test_fairness.py  test_file_readers.py  test_hdf5_reader.py  test_hipaa.py  test_parquet_reader.py  test_privacy.py  test_public_api.py
web/: __init__.py  globus.py  llm.py  telemetry.py
web/routes/: __init__.py  admin.py  core.py  custom.py  globus.py  llm.py  metrics.py  utils.py
web/static/css/: inspector.css  styles.css  theme.css
web/static/datasets/test_data/dcat/: BUTTER-E.json
web/static/datasets/test_data/parquet/: adult.parquet
web/static/datasets/test_data/xlsx/: smallSample.xlsx
web/static/js/: inspector.js  main.js  metric.js
web/templates/: _base.html  homepage.html  inspector.html  logs.html  my_cache.html  publications.html  universalComponents.html  upload_file.html
web/templates/_components/: globus_panel.html  llm_settings.html  results_container.html  sidebar.html  topbar.html  upload_panel.html
web/templates/_panels/: _class_imbalance.html  _correlation_analysis.html  _custom_metrics.html  _data_overview.html  _data_quality.html  _fair_assessment.html  _fairness.html  _feature_relevance.html  _hipaa_compliance.html  _privacy_preservation.html
web/templates/metricTemplates/: classImbalance.html  class_imbalance.html  correlationAnalysis.html  correlation_analysis.html  customMetrics.html  custom_metrics.html  dataQuality.html  data_quality.html  fairness.html  featureRelevance.html  feature_relevance.html  hipaaCompliance.html  hipaa_compliance.html  metricBase.html  metricTemplate.html  privacyPreservation.html  privacy_preservation.html  upload_meta.html
worker/: make_celery.py  tasks.py
