[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "aidrin"
dynamic = ["version"]
readme = "README.md"
description="A tool to evaluate the readiness of data for AI"
maintainers = [{name = "Kaveen Hiniduma", email = "hiniduma.1@osu.edu"},{name = "Suren Byna", email = "byna.1@osu.edu"}]
dependencies = [
    "setuptools",
    "flask==3.0.2",
    "matplotlib==3.10.5",
    "dython==0.7.5",
    "pandas==2.2.1",
    "shap==0.48.0",
    "h5py==3.14.0",
    "celery==5.5.3",
    "redis==6.4.0",
    "flower",
    "openpyxl==3.1.5"
]

[tool.setuptools.dynamic]
version = {attr = "aidrin._version.__version__"}

[tool.coverage.run]
branch = true
source = ["aidrin"]
