[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"


[project]
name = "aidrin"
dynamic = ["version"]
readme = "README.md"
description = "A tool to evaluate the readiness of data for AI"
requires-python = ">=3.10"
maintainers = [
    {name = "Kaveen Hiniduma", email = "hiniduma.1@osu.edu"},
    {name = "Suren Byna", email = "byna.1@osu.edu"},
]
dependencies = [
    "flask>=3.1.3",
    "celery>=5.5.3",
    "redis>=6.4.0",
    "flower",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.15.3",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "dython>=0.7.5",
    "setuptools<81",  # dython requires pkg_resources, removed in setuptools>=82
    "shap>=0.48.0",
    "h5py>=3.14.0",
    "openpyxl>=3.1.5",
    "pgeocode>=0.5.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
# Legacy extras kept for backward compatibility with pip users.
# Prefer dependency groups below when using uv.
globus = [
    "globus-compute-sdk>=2.3.0",
    "globus-sdk>=3.20.0",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-flask>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20",
]
llm = [
    "openai>=1.0",
]
mcp = [
    "mcp>=1.0",
    "openai>=1.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]
agentic = [
    "openai>=1.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.26.4",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-flask",
    "flake8>=6.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx==6.2.1",
    "sphinx-rtd-theme==1.2.2",
    "sphinxemoji",
    "breathe",
]

# ---------------------------------------------------------------------------
# uv run shortcuts
# ---------------------------------------------------------------------------
# Start the development web server:
#   uv run flask --app 'web:create_app()' run --debug
#
# Start the Celery worker:
#   uv run celery -A worker.make_celery worker --loglevel=info
#
# Start Celery beat (scheduled tasks):
#   uv run celery -A worker.make_celery beat --loglevel=info

[project.scripts]
aidrin = "aidrin.headless.cli:main"
aidrin-mcp = "aidrin.mcp.server:main"

[tool.setuptools.packages.find]
include = ["aidrin*", "web*", "worker*"]

[tool.setuptools.package-data]
"aidrin.agentic" = []

[tool.setuptools.dynamic]
version = {attr = "aidrin._version.__version__"}


# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-flask",
    "flake8>=6.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx==6.2.1",
    "sphinx-rtd-theme==1.2.2",
    "sphinxemoji",
    "breathe",
]
agentic = [
    "openai>=1.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.26.4",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]
mcp = [
    "mcp>=1.0",
    "openai>=1.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.7.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]


# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
filterwarnings = [
    # dateutil uses deprecated utcfromtimestamp — upstream issue
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["aidrin", "web", "worker"]
